--- a/app/views/charts/_paid_vs_unpaid_chart.html.erb
+++ b/app/views/charts/_paid_vs_unpaid_chart.html.erb
@@ -5,7 +5,7 @@
   id="paid-vs-unpaid-chart-container" data-turbo-cache="false"
 >
   <header class="px-5 py-4 border-b border-slate-100 flex items-center">
-      <h2 class="font-semibold text-slate-800"><%= t("pendientes_vs_pagadas") %></h2>
+      <h2 class="font-semibold text-slate-800"><%= ("Outstanding VS Paid") %></h2>
   </header>
   <div data-paid-vs-unpaid-chart-target="chart"></div>
 </div>
