--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,21 +1,21 @@
-  <% content_for(:page_title, t("register")) %>
+  <% content_for(:page_title, ("Create account")) %>
   
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     
     <div class="space-y-4">
       <%= render "devise/shared/error_messages", resource: resource %>
       <div>
-        <%= f.label :email, t("email"), class: "input-label" %>
+        <%= f.label :email, ("email"), class: "input-label" %>
         <%= f.email_field :email, required: true, class: "form-input w-full" %>
       </div>
 
       <div>
-        <%= f.label :password, t("password"), class: "input-label" %>
+        <%= f.label :password, ("password"), class: "input-label" %>
         <%= f.password_field :password, required: true, class: "form-input w-full" %>
       </div>
 
       <div>
-        <%= f.label :password_confirmation, t("confirm_password"), class: "input-label" %>
+        <%= f.label :password_confirmation, ("confirm_password"), class: "input-label" %>
         <%= f.password_field :password_confirmation, required: true, class: "form-input w-full" %>
       </div>
     </div>
@@ -23,16 +23,16 @@
       <div class="mr-1">
           <label class="flex items-center">
               <input type="checkbox" class="form-checkbox" />
-              <span class="text-sm ml-2"><%= t("email_me_news") %></span>
+              <span class="text-sm ml-2"><%= ("email_me_news") %></span>
           </label>
       </div>
-      <%= f.submit t("register"), class: "btn bg-indigo-500 hover:bg-indigo-600 text-white ml-3 whitespace-nowrap" %>
+      <%= f.submit ("register"), class: "btn bg-indigo-500 hover:bg-indigo-600 text-white ml-3 whitespace-nowrap" %>
     </div>
   <% end %>
   <!-- Footer -->
   <div class="pt-5 mt-6 border-t border-slate-200">
     <div class="text-sm">
-      <%= t("already_registered?") %>
-      <%= link_to t("signin"), new_user_session_path, class: "font-medium text-indigo-500 hover:text-indigo-600" %>
+      <%= ("already_registered?") %>
+      <%= link_to ("signin"), new_user_session_path, class: "font-medium text-indigo-500 hover:text-indigo-600" %>
     </div>
   </div>
