--- a/app/views/charts/_invoices_chart.html.erb
+++ b/app/views/charts/_invoices_chart.html.erb
@@ -5,7 +5,7 @@
   id="invoices-chart-container" data-turbo-cache="false"
 >
   <header class="px-5 py-4 border-b border-slate-100 flex items-center">
-      <h2 class="font-semibold text-slate-800"><%= t("facturacion_diaria") %></h2>
+      <h2 class="font-semibold text-slate-800"><%= ("Invoicing by Days") %></h2>
   </header>
   <div class="hidden px-5 py-3">
     <div class="flex flex-wrap justify-between items-end">
