--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,5 +1,5 @@
 <div class="mx-auto md:w-3/4 w-full">
-  <%= link_to sanitize("&larr; Regresar a clientes"), clients_path, class: "back-button" %>
+  <%= link_to sanitize("&larr; All Clients"), clients_path, class: "back-button" %>
   <h1 class="title"><%= t("nuevo_cliente") %> ✨</h1>
 
   <%= render "form", client: @client %>
