--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -52,7 +52,7 @@
       <% end %>
     </div>
 
-    <%= link_to add_item_invoices_path(id: f.object), class: "text-indigo-600 hover:underline",
+    <%= link_to add_item_invoices_path(id: f.object), class: "text-red-600 hover:underline",
       data: { turbo_method: :post } do %>
       <%= (heroicon "plus", options: { class: "inline -mt-1"} ) + t("agregar_linea_item") %>
     <% end %>
@@ -61,7 +61,7 @@
 
     <div class="flex justify-between items-center cursor-pointer" data-action='click->toggle#toggle touch->toggle#toggle'>
       <h2 class="flex text-lg my-5 font-bold"><%= t("mas_opciones") %></h2>
-      <%= link_to "#", class: "text-indigo-600 hover:underline" do %>
+      <%= link_to "#", class: "text-red-600 hover:underline" do %>
         <%= (heroicon "chevron-up-down", options: { class: "inline"} ) %>
         <%= t("mostrar") %>
       <% end %>
@@ -88,7 +88,7 @@
     <hr class="mb-5"/>
 
     <div class="inline">
-      <%= f.submit t("guardar_factura"), class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
+      <%= f.submit ("Save Invoice"), class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
     </div>
   <% end %>
 </div>
