--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -30,7 +30,7 @@
             </div>
         <% end %>
         <!-- Create invoice button -->
-        <button class="btn bg-indigo-500 hover:bg-indigo-600 text-white">
+        <button class="btn bg-red-500 hover:bg-red-600 text-white">
             <svg class="w-4 h-4 fill-current opacity-50 shrink-0" viewBox="0 0 16 16">
                 <path d="M15 7H9V1c0-.6-.4-1-1-1S7 .4 7 1v6H1c-.6 0-1 .4-1 1s.4 1 1 1h6v6c0 .6.4 1 1 1s1-.4 1-1V9h6c.6 0 1-.4 1-1s-.4-1-1-1z" />
             </svg>
@@ -131,7 +131,7 @@
                                     </div>
                                 </th>
                                 <th class="px-2 first:pl-5 last:pr-5 py-3 whitespace-nowrap">
-                                    <div class="font-semibold text-left relative <%= "text-indigo-500" if params[:sort] == "invoice_number" %>">
+                                    <div class="font-semibold text-left relative <%= "text-red-500" if params[:sort] == "invoice_number" %>">
                                         <%= sort_link_to t("numero"), :invoice_number, data: { turbo_action: "advance" } %>
                                         <span class="absolute top-0 left-13">
                                             <%= sort_indicator if params[:sort] == "invoice_number" %>
@@ -139,7 +139,7 @@
                                     </div>
                                 </th>
                                 <th class="px-2 first:pl-5 last:pr-5 py-3 whitespace-nowrap">
-                                    <div class="font-semibold text-left relative <%= "text-indigo-500" if params[:sort] == "total" %>">
+                                    <div class="font-semibold text-left relative <%= "text-red-500" if params[:sort] == "total" %>">
                                         <%= sort_link_to t("total"), :total, data: { turbo_action: "advance" } %>
                                         <span class="absolute top-0 left-10">
                                             <%= sort_indicator if params[:sort] == "total" %>
@@ -147,7 +147,7 @@
                                     </div>
                                 </th>
                                 <th class="px-2 first:pl-5 last:pr-5 py-3 whitespace-nowrap">
-                                    <div class="font-semibold text-left relative <%= "text-indigo-500" if params[:sort] == "status" %>">
+                                    <div class="font-semibold text-left relative <%= "text-red-500" if params[:sort] == "status" %>">
                                         <%= sort_link_to t("estatus"), :status, data: { turbo_action: "advance" } %>
                                         <span class="absolute top-0 left-14">
                                             <%= sort_indicator if params[:sort] == "status" %>
@@ -160,7 +160,7 @@
                                     </div>
                                 </th>
                                 <th class="px-2 first:pl-5 last:pr-5 py-3 whitespace-nowrap">
-                                    <div class="font-semibold text-left relative <%= "text-indigo-500" if params[:sort] == "date" %>">
+                                    <div class="font-semibold text-left relative <%= "text-red-500" if params[:sort] == "date" %>">
                                         <%= sort_link_to t("emitida"), :date, data: { turbo_action: "advance" } %>
                                         <span class="absolute top-0 left-12">
                                             <%= sort_indicator if params[:sort] == "date" %>
@@ -168,7 +168,7 @@
                                     </div>
                                 </th>
                                 <th class="px-2 first:pl-5 last:pr-5 py-3 whitespace-nowrap">
-                                    <div class="font-semibold text-left relative <%= "text-indigo-500" if params[:sort] == "due_date" %>">
+                                    <div class="font-semibold text-left relative <%= "text-red-500" if params[:sort] == "due_date" %>">
                                         <%= sort_link_to t("vencimiento"), :due_date, data: { turbo_action: "advance" } %>
                                         <span class="absolute top-0 left-18">
                                             <%= sort_indicator if params[:sort] == "due_date" %>
