--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -1,6 +1,6 @@
 <div class="mx-auto w-full">
-  <%= link_to sanitize("&larr; Regresar a facturas"), invoices_path, class: "back-button" %>
-  <h1 class="title"><%= t("nueva_factura")%> ✨</h1>
+  <%= link_to sanitize("&larr; Return to Invoices"), invoices_path, class: "back-button" %>
+  <h1 class="title"><%= ("New Invoice")%> ✨</h1>
 
   <%= render "form", invoice: @invoice %>
 
