--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -18,7 +18,7 @@
 
     <div class="my-1">
       <%= form.label :iva, t("iva"), class: "input-label" %>
-      <%= form.select :iva, options_for_select([["21%", 21], ["10%", 10], ["4%", 4], ["0%", 0]]), {}, {class: "form-select w-full" } %>
+      <%= form.select :iva, options_for_select([["0%", 0], ["18%", 18]]), {}, {class: "form-select w-full" } %>
     </div>
 
     <div class="inline">
