--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -17,7 +17,7 @@
         <div class="text-left"><%= simple_format item.description %></div>
     </td>
     <td class="px-2 first:pl-5 last:pr-5 py-3 whitespace-nowrap">
-        <div class="text-left"><%= number_to_currency(item.price, locale: :es) %></div>
+        <div class="text-left"><%= number_to_currency(item.price, locale: :en) %></div>
     </td>
     <td class="px-2 first:pl-5 last:pr-5 py-3 whitespace-nowrap">
         <div class="text-center"><%= item.iva %></div>
