--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -5,7 +5,7 @@
 
     <!-- Left: Title -->
     <div class="mb-4 sm:mb-0">
-        <h1 class="text-2xl md:text-3xl text-slate-800 font-bold"><%= t("items") %> ✨</h1>
+        <h1 class="text-2xl md:text-3xl text-slate-800 font-bold"><%= ("items") %> ✨</h1>
     </div>
 
     <!-- Right: Actions -->
@@ -14,8 +14,8 @@
         <!-- Delete button -->
         <div class="table-items-action hidden">
             <div class="flex items-center">
-                <div class="hidden xl:block text-sm italic mr-2 whitespace-nowrap"><span class="table-items-count"></span> <%= t("items_selecionados") %></div>
-                <button class="btn bg-white border-slate-200 hover:border-slate-300 text-rose-500 hover:text-rose-600"><%= t("borrar") %></button>
+                <div class="hidden xl:block text-sm italic mr-2 whitespace-nowrap"><span class="table-items-count"></span> <%= ("items_selecionados") %></div>
+                <button class="btn bg-white border-slate-200 hover:border-slate-300 text-rose-500 hover:text-rose-600"><%= ("borrar") %></button>
             </div>
         </div>
         <!-- Sort and Search -->
@@ -23,8 +23,8 @@
             <div class="relative">
                 <%= form_with url: "", method: :get, data: { turbo_frame: "items", turbo_action: "advance" } do |form| %>
                     <!-- Search form -->
-                    <label for="action-search" class="sr-only"><%= t("buscar") %></label>
-                    <%= form.search_field :query, value: params[:query], oninput: "this.form.requestSubmit()", class: "form-input pl-9 focus:border-slate-300", placeholder: t("buscar_items") %>
+                    <label for="action-search" class="sr-only"><%= ("buscar") %></label>
+                    <%= form.search_field :query, value: params[:query], oninput: "this.form.requestSubmit()", class: "form-input pl-9 focus:border-slate-300", placeholder: ("buscar_items") %>
                     <button class="absolute inset-0 right-auto group" type="submit" aria-label="Search">
                         <svg class="w-4 h-4 shrink-0 fill-current text-slate-500 group-hover:text-slate-500 ml-3 mr-2" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                             <path d="M7 14c-3.86 0-7-3.14-7-7s3.14-7 7-7 7 3.14 7 7-3.14 7-7 7zM7 2C4.243 2 2 4.243 2 7s2.243 5 5 5 5-2.243 5-5-2.243-5-5-5z" />
@@ -32,17 +32,17 @@
                         </svg>
                     </button>
                     <!-- Sort --> 
-                    <label for="action-search" class="sr-only"><%= t("cantidad_por_pagina") %></label>
+                    <label for="action-search" class="sr-only"><%= ("cantidad_por_pagina") %></label>
                     <%= form.select :count, options_for_select([10, 25, 50, 100], selected: params[:count]), {}, {class: "form-input pr-7 focus:border-slate-300 text-slate-500", onchange: "this.form.requestSubmit()"} %>
                 <% end %>
             </div>
         <% end %>
         <!-- Add item button -->
-        <a href="<%= new_item_path %>" class="btn bg-indigo-500 hover:bg-indigo-600 text-white">
+        <a href="<%= new_item_path %>" class="btn bg-red-500 hover:bg-red-600 text-white">
             <svg class="w-4 h-4 fill-current opacity-50 shrink-0" viewBox="0 0 16 16">
                 <path d="M15 7H9V1c0-.6-.4-1-1-1S7 .4 7 1v6H1c-.6 0-1 .4-1 1s.4 1 1 1h6v6c0 .6.4 1 1 1s1-.4 1-1V9h6c.6 0 1-.4 1-1s-.4-1-1-1z" />
             </svg>
-            <span class="xs:block ml-2"><%= t("nuevo_item") %></span>
+            <span class="xs:block ml-2"><%= ("New item") %></span>
         </a>                            
         
     </div>
@@ -56,7 +56,7 @@
             <div class="overflow-x-auto">
                 <% if @items.none? %>
                     <% if params[:query].nil? %>
-                        <%= render "shared/empty_state", title: t("no_hay_items"), text: t("no_hay_items_texto"), button_text: t("nuevo_item"), the_link: new_item_path %>
+                        <%= render "shared/empty_state",  title: ("No items"), text: ("Click to create new Item"), button_text: ("New item"), the_link: new_item_path %>
                     <% else %>
                         <%= render "shared/search_not_found", the_link: items_url %>
                     <% end %>
@@ -68,45 +68,45 @@
                                 <th class="px-2 first:pl-5 last:pr-5 py-3 whitespace-nowrap w-px">
                                     <div class="flex items-center">
                                         <label class="inline-flex">
-                                            <span class="sr-only"><%= t("seleccionar_todo") %></span>
+                                            <span class="sr-only"><%= ("Select all") %></span>
                                             <input id="parent-checkbox" class="form-checkbox" type="checkbox" @click="toggleAll" />
                                         </label>
                                     </div>
                                 </th>
                                 <th class="px-2 first:pl-5 last:pr-5 py-3 whitespace-nowrap">
-                                    <div class="font-semibold text-left relative <%= "text-indigo-500" if params[:sort] == "item_name" %>">
-                                        <%= sort_link_to t("nombre"), :item_name, data: { turbo_action: "advance" } %>
+                                    <div class="font-semibold text-left relative <%= "text-red-500" if params[:sort] == "item_name" %>">
+                                        <%= sort_link_to ("Number"), :item_name, data: { turbo_action: "advance" } %>
                                         <span class="absolute top-0 left-14">
                                             <%= sort_indicator if params[:sort] == "item_name" %>
                                         </span>
                                     </div>
                                 </th>
                                 <th class="px-2 first:pl-5 last:pr-5 py-3 whitespace-nowrap">
-                                    <div class="font-semibold text-left relative <%= "text-indigo-500" if params[:sort] == "description" %>">
-                                        <%= sort_link_to t("descripcion"), :description, data: { turbo_action: "advance" } %>
-                                        <span class="absolute top-0 left-15 text-indigo-500">
+                                    <div class="font-semibold text-left relative <%= "text-red-500" if params[:sort] == "description" %>">
+                                        <%= sort_link_to ("Descripcion"), :description, data: { turbo_action: "advance" } %>
+                                        <span class="absolute top-0 left-15 text-red-500">
                                             <%= sort_indicator if params[:sort] == "description" %>
                                         </span>
                                     </div>
                                 </th>
                                 <th class="px-2 first:pl-5 last:pr-5 py-3 whitespace-nowrap">
-                                    <div class="font-semibold text-left relative <%= "text-indigo-500" if params[:sort] == "price" %>">
-                                        <%= sort_link_to t("precio"), :price, data: { turbo_action: "advance" } %>
-                                        <span class="absolute top-0 left-13 text-indigo-500">
+                                    <div class="font-semibold text-left relative <%= "text-red-500" if params[:sort] == "price" %>">
+                                        <%= sort_link_to ("Price"), :price, data: { turbo_action: "advance" } %>
+                                        <span class="absolute top-0 left-13 text-red-500">
                                             <%= sort_indicator if params[:sort] == "price" %>
                                         </span>
                                     </div>
                                 </th>
                                 <th class="px-2 first:pl-5 last:pr-5 py-3 whitespace-nowrap">
-                                    <div class="font-semibold relative <%= "text-indigo-500" if params[:sort] == "iva" %>">
-                                        <%= sort_link_to t("iva") , :iva, data: { turbo_action: "advance" } %>
-                                        <span class="absolute top-0 left-5 text-indigo-500">
+                                    <div class="font-semibold relative <%= "text-red-500" if params[:sort] == "iva" %>">
+                                        <%= sort_link_to ("Vat") , :iva, data: { turbo_action: "advance" } %>
+                                        <span class="absolute top-0 left-5 text-red-500">
                                             <%= sort_indicator if params[:sort] == "iva" %>
                                         </span>
                                     </div>
                                 </th>
                                 <th class="px-2 first:pl-5 last:pr-5 py-3 whitespace-nowrap">
-                                    <span class="sr-only"><%= t("acciones") %></span>
+                                    <span class="sr-only"><%= ("Actions") %></span>
                                 </th>
                             </tr>
                         </thead>
