--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -44,7 +44,7 @@
                     <path d="M7.404 2.503l18.339 26.19A15.93 15.93 0 0116 32C7.163 32 0 24.837 0 16 0 10.327 2.952 5.344 7.404 2.503z" fill="url(#logo-a)" />
                     <path d="M2.223 24.14L29.777 7.86A15.926 15.926 0 0132 16c0 8.837-7.163 16-16 16-5.864 0-10.991-3.154-13.777-7.86z" fill="url(#logo-b)" />
                 </svg>
-                <span class="hidden sidebar-expanded:block text-3xl text-indigo-200 mt-1">Facturación</span>
+                <span class="hidden sidebar-expanded:block text-3xl text-red-200 mt-1">SifCargo</span>
             <% end %>
         </div>
 
@@ -63,9 +63,9 @@
                             <div class="flex items-center justify-between">
                                 <div class="flex items-center">
                                     <svg class="shrink-0 h-6 w-6" viewBox="0 0 24 24">
-                                        <path class="fill-current" d="M12 0C5.383 0 0 5.383 0 12s5.383 12 12 12 12-5.383 12-12S18.617 0 12 0z" :class="open || active_path.match(/(?<=(dashboard))\d*/) ? 'text-indigo-500' : 'text-slate-400'" />
-                                        <path class="fill-current" d="M12 3c-4.963 0-9 4.037-9 9s4.037 9 9 9 9-4.037 9-9-4.037-9-9-9z" :class="open || active_path.match(/(?<=(dashboard))\d*/) ? 'text-indigo-600' : 'text-slate-600'" />
-                                        <path class="fill-current" d="M12 15c-1.654 0-3-1.346-3-3 0-.462.113-.894.3-1.285L6 6l4.714 3.301A2.973 2.973 0 0112 9c1.654 0 3 1.346 3 3s-1.346 3-3 3z" :class="open || active_path.match(/(?<=(dashboard))\d*/) ? 'text-indigo-200' : 'text-slate-400'" />
+                                        <path class="fill-current" d="M12 0C5.383 0 0 5.383 0 12s5.383 12 12 12 12-5.383 12-12S18.617 0 12 0z" :class="open || active_path.match(/(?<=(dashboard))\d*/) ? 'text-red-500' : 'text-slate-400'" />
+                                        <path class="fill-current" d="M12 3c-4.963 0-9 4.037-9 9s4.037 9 9 9 9-4.037 9-9-4.037-9-9-9z" :class="open || active_path.match(/(?<=(dashboard))\d*/) ? 'text-red-600' : 'text-slate-600'" />
+                                        <path class="fill-current" d="M12 15c-1.654 0-3-1.346-3-3 0-.462.113-.894.3-1.285L6 6l4.714 3.301A2.973 2.973 0 0112 9c1.654 0 3 1.346 3 3s-1.346 3-3 3z" :class="open || active_path.match(/(?<=(dashboard))\d*/) ? 'text-red-200' : 'text-slate-400'" />
                                     </svg>
                                     <span class="text-sm font-medium ml-3 lg:opacity-0 lg:sidebar-expanded:opacity-100 2xl:opacity-100 duration-200"><%= t("tablero") %></span>
                                 </div>
@@ -78,9 +78,9 @@
                             <div class="flex items-center justify-between">
                                 <div class="flex items-center">
                                     <svg class="shrink-0 h-6 w-6" viewBox="0 0 24 24">
-                                        <path class="fill-current" d="M13 6.068a6.035 6.035 0 0 1 4.932 4.933H24c-.486-5.846-5.154-10.515-11-11v6.067Z" :class="open || active_path.match(/(?<=(invoices))\d*/) ? 'text-indigo-300' : 'text-slate-400'" />
-                                        <path class="fill-current" d="M18.007 13c-.474 2.833-2.919 5-5.864 5a5.888 5.888 0 0 1-3.694-1.304L4 20.731C6.131 22.752 8.992 24 12.143 24c6.232 0 11.35-4.851 11.857-11h-5.993Z" :class="open || active_path.match(/(?<=(invoices))\d*/) ? 'text-indigo-500' : 'text-slate-700'" />
-                                        <path class="fill-current" d="M6.939 15.007A5.861 5.861 0 0 1 6 11.829c0-2.937 2.167-5.376 5-5.85V0C4.85.507 0 5.614 0 11.83c0 2.695.922 5.174 2.456 7.17l4.483-3.993Z" :class="open || active_path.match(/(?<=(invoices))\d*/) ? 'text-indigo-600' : 'text-slate-600'" />
+                                        <path class="fill-current" d="M13 6.068a6.035 6.035 0 0 1 4.932 4.933H24c-.486-5.846-5.154-10.515-11-11v6.067Z" :class="open || active_path.match(/(?<=(invoices))\d*/) ? 'text-red-300' : 'text-slate-400'" />
+                                        <path class="fill-current" d="M18.007 13c-.474 2.833-2.919 5-5.864 5a5.888 5.888 0 0 1-3.694-1.304L4 20.731C6.131 22.752 8.992 24 12.143 24c6.232 0 11.35-4.851 11.857-11h-5.993Z" :class="open || active_path.match(/(?<=(invoices))\d*/) ? 'text-red-500' : 'text-slate-700'" />
+                                        <path class="fill-current" d="M6.939 15.007A5.861 5.861 0 0 1 6 11.829c0-2.937 2.167-5.376 5-5.85V0C4.85.507 0 5.614 0 11.83c0 2.695.922 5.174 2.456 7.17l4.483-3.993Z" :class="open || active_path.match(/(?<=(invoices))\d*/) ? 'text-red-600' : 'text-slate-600'" />
                                     </svg>
                                     <span class="text-sm font-medium ml-3 lg:opacity-0 lg:sidebar-expanded:opacity-100 2xl:opacity-100 duration-200"><%= t("facturas") %></span>
                                 </div>
@@ -113,8 +113,8 @@
                             <div class="flex items-center justify-between">
                                 <div class="flex items-center">
                                     <svg class="shrink-0 h-6 w-6" viewBox="0 0 24 24">
-                                        <path class="fill-current" d="M18.974 8H22a2 2 0 012 2v6h-2v5a1 1 0 01-1 1h-2a1 1 0 01-1-1v-5h-2v-6a2 2 0 012-2h.974zM20 7a2 2 0 11-.001-3.999A2 2 0 0120 7zM2.974 8H6a2 2 0 012 2v6H6v5a1 1 0 01-1 1H3a1 1 0 01-1-1v-5H0v-6a2 2 0 012-2h.974zM4 7a2 2 0 11-.001-3.999A2 2 0 014 7z" :class="open || active_path.match(/(?<=(clients))\d*/) ? 'text-indigo-500' : 'text-slate-600'"  />
-                                        <path class="fill-current" d="M12 6a3 3 0 110-6 3 3 0 010 6zm2 18h-4a1 1 0 01-1-1v-6H6v-6a3 3 0 013-3h6a3 3 0 013 3v6h-3v6a1 1 0 01-1 1z" :class="open || active_path.match(/(?<=(clients))\d*/) ? 'text-indigo-300' : 'text-slate-400'" />
+                                        <path class="fill-current" d="M18.974 8H22a2 2 0 012 2v6h-2v5a1 1 0 01-1 1h-2a1 1 0 01-1-1v-5h-2v-6a2 2 0 012-2h.974zM20 7a2 2 0 11-.001-3.999A2 2 0 0120 7zM2.974 8H6a2 2 0 012 2v6H6v5a1 1 0 01-1 1H3a1 1 0 01-1-1v-5H0v-6a2 2 0 012-2h.974zM4 7a2 2 0 11-.001-3.999A2 2 0 014 7z" :class="open || active_path.match(/(?<=(clients))\d*/) ? 'text-red-500' : 'text-slate-600'"  />
+                                        <path class="fill-current" d="M12 6a3 3 0 110-6 3 3 0 010 6zm2 18h-4a1 1 0 01-1-1v-6H6v-6a3 3 0 013-3h6a3 3 0 013 3v6h-3v6a1 1 0 01-1 1z" :class="open || active_path.match(/(?<=(clients))\d*/) ? 'text-red-300' : 'text-slate-400'" />
                                     </svg>
                                     <span class="text-sm font-medium ml-3 lg:opacity-0 lg:sidebar-expanded:opacity-100 2xl:opacity-100 duration-200"><%= t("clientes") %></span>
                                 </div>
@@ -147,9 +147,9 @@
                             <div class="flex items-center justify-between">
                                 <div class="flex items-center">
                                     <svg class="shrink-0 h-6 w-6" viewBox="0 0 24 24">
-                                        <path class="fill-current" d="M8 1v2H3v19h18V3h-5V1h7v23H1V1z" :class="open || active_path.match(/(?<=(items))\d*/) ? 'text-indigo-500' : 'text-slate-600'" />
-                                        <path class="fill-current" d="M1 1h22v23H1z" :class="open || active_path.match(/(?<=(items))\d*/) ? 'text-indigo-500' : 'text-slate-600'" />
-                                        <path class="fill-current" d="M15 10.586L16.414 12 11 17.414 7.586 14 9 12.586l2 2zM5 0h14v4H5z" :class="open || active_path.match(/(?<=(items))\d*/) ? 'text-indigo-300' : 'text-slate-400'" />
+                                        <path class="fill-current" d="M8 1v2H3v19h18V3h-5V1h7v23H1V1z" :class="open || active_path.match(/(?<=(items))\d*/) ? 'text-red-500' : 'text-slate-600'" />
+                                        <path class="fill-current" d="M1 1h22v23H1z" :class="open || active_path.match(/(?<=(items))\d*/) ? 'text-red-500' : 'text-slate-600'" />
+                                        <path class="fill-current" d="M15 10.586L16.414 12 11 17.414 7.586 14 9 12.586l2 2zM5 0h14v4H5z" :class="open || active_path.match(/(?<=(items))\d*/) ? 'text-red-300' : 'text-slate-400'" />
                                     </svg>
                                     <span class="text-sm font-medium ml-3 lg:opacity-0 lg:sidebar-expanded:opacity-100 2xl:opacity-100 duration-200"><%= t("items") %></span>
                                 </div>
@@ -182,10 +182,10 @@
                             <div class="flex items-center justify-between">
                                 <div class="flex items-center">
                                     <svg class="shrink-0 h-6 w-6" viewBox="0 0 24 24">
-                                        <path class="fill-current" d="M19.714 14.7l-7.007 7.007-1.414-1.414 7.007-7.007c-.195-.4-.298-.84-.3-1.286a3 3 0 113 3 2.969 2.969 0 01-1.286-.3z" :class="open || active_path.match(/(?<=(users))\d*/) ? 'text-indigo-500' : 'text-slate-600'" />
-                                        <path class="fill-current" d="M10.714 18.3c.4-.195.84-.298 1.286-.3a3 3 0 11-3 3c.002-.446.105-.885.3-1.286l-6.007-6.007 1.414-1.414 6.007 6.007z" :class="open || active_path.match(/(?<=(users))\d*/) ? 'text-indigo-300' : 'text-slate-400'" />
-                                        <path class="fill-current" d="M5.7 10.714c.195.4.298.84.3 1.286a3 3 0 11-3-3c.446.002.885.105 1.286.3l7.007-7.007 1.414 1.414L5.7 10.714z" :class="open || active_path.match(/(?<=(users))\d*/) ? 'text-indigo-500' : 'text-slate-600'" />
-                                        <path class="fill-current" d="M19.707 9.292a3.012 3.012 0 00-1.415 1.415L13.286 5.7c-.4.195-.84.298-1.286.3a3 3 0 113-3 2.969 2.969 0 01-.3 1.286l5.007 5.006z" :class="open || active_path.match(/(?<=(users))\d*/) ? 'text-indigo-300' : 'text-slate-400'" />
+                                        <path class="fill-current" d="M19.714 14.7l-7.007 7.007-1.414-1.414 7.007-7.007c-.195-.4-.298-.84-.3-1.286a3 3 0 113 3 2.969 2.969 0 01-1.286-.3z" :class="open || active_path.match(/(?<=(users))\d*/) ? 'text-red-500' : 'text-slate-600'" />
+                                        <path class="fill-current" d="M10.714 18.3c.4-.195.84-.298 1.286-.3a3 3 0 11-3 3c.002-.446.105-.885.3-1.286l-6.007-6.007 1.414-1.414 6.007 6.007z" :class="open || active_path.match(/(?<=(users))\d*/) ? 'text-red-300' : 'text-slate-400'" />
+                                        <path class="fill-current" d="M5.7 10.714c.195.4.298.84.3 1.286a3 3 0 11-3-3c.446.002.885.105 1.286.3l7.007-7.007 1.414 1.414L5.7 10.714z" :class="open || active_path.match(/(?<=(users))\d*/) ? 'text-red-500' : 'text-slate-600'" />
+                                        <path class="fill-current" d="M19.707 9.292a3.012 3.012 0 00-1.415 1.415L13.286 5.7c-.4.195-.84.298-1.286.3a3 3 0 113-3 2.969 2.969 0 01-.3 1.286l5.007 5.006z" :class="open || active_path.match(/(?<=(users))\d*/) ? 'text-red-300' : 'text-slate-400'" />
                                     </svg>
                                     <span class="text-sm font-medium ml-3 lg:opacity-0 lg:sidebar-expanded:opacity-100 2xl:opacity-100 duration-200"><%= t("ajustes") %></span>
                                 </div>
